After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 108225 - [h]:mm doesn't show minuts
[h]:mm doesn't show minuts
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
1.1.x
Other All
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
: 110488 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2003-03-12 18:23 UTC by Mikael Andersson
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mikael Andersson 2003-03-12 18:23:41 UTC
Hi! In Gnumeric 1.1.16 (debian version 1.1.16-5) the [h]:mm format doesn't
show minutes. 

Put ="20:30"-"3:00" in a cell. 

If you format it with: hh:mm you get 17:30, 
but if you format it with [h]:mm you get 18:00.

In previous versions (gnome1?) the [h]:mm displayed 17:30.

Sincerely
Mikael
Comment 1 Jody Goldberg 2003-03-13 04:48:51 UTC
Doh!  Thats what I get for rushing.
Thanks.  Fixed in CVS.
Comment 2 Morten Welinder 2003-04-10 20:11:54 UTC
*** Bug 110488 has been marked as a duplicate of this bug. ***