http://bugzilla.gnome.org/show_bug.cgi?id=108225 why did I round this ?

2003-03-12  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=108225
	* src/format.c (append_hour_elapsed) : why did I round this ?
	  Ideally we need to know the display precision to round correctly.

	* src/gui-util.c (cb_keyed_dialog_keypress) : new.
	(gnumeric_keyed_dialog) : initialize it here so that all the keyed
	  dialogs get support for quiting when Escape is pressed.